--- a/src/shared/components/avatar-menu/avatar-menu.component.html
+++ b/src/shared/components/avatar-menu/avatar-menu.component.html
@@ -1,10 +1,10 @@
 <div class="sm-dropdown btn-group">
     <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <img class="avatar" src="../../../assets//images/avatar.png" />
+        <img class="avatar" src="../../../assets//images/profiles.png" />
     </button>
     <ul class="pointer dropdown-menu dropdown-menu-right">
-        <li><a href="javascript:void()">My Profile</a></li>
-        <li><a href="javascript:void()">Settings</a></li>
+        <li><a href="/profile">My Profile</a></li>
+        <li><a href="/settings">Settings</a></li>
         <li role="separator" class="divider"></li>
         <li><a (click)="logout()">Log Off</a></li>
     </ul>
