--- a/src/shared/components/site-footer/site-footer.component.html
+++ b/src/shared/components/site-footer/site-footer.component.html
@@ -1,7 +1,6 @@
 <footer class="site">
     <div class="container">
     <div class="row">
-  
     <div class="col-sm-2">
       <h1>Navigation</h1>
       <ul>
@@ -32,18 +31,18 @@
   
     <div class="col-sm-offset-1 col-sm-5">
       <div id="social">
-        <h1>Steeple-Map</h1>
+        <h1>Steeple-Mate</h1>
         <div id="image-row">
-          <a target="_blank" rel="noreferrer noopener" href="https://www.instagram.com/industryjump/"><span class="ij icon instagram-gray"></span></a>
-          <a target="_blank" rel="noreferrer noopener" href="https://www.facebook.com/industryjump/"><span class="ij icon facebook-gray"></span></a>
-          <a target="_blank" rel="noreferrer noopener" href="https://www.youtube.com/channel/UCRILLI761_zdTeyG9hfP2Cw"><span class="ij icon youtube-gray"></span></a>
+          <a target="_blank" rel="noreferrer noopener" href="#"><span class="fa fa-facebook-official"></span></a>
+          <a target="_blank" rel="noreferrer noopener" href="#"><span class="fa fa-instagram"></span></a>
+          <a target="_blank" rel="noreferrer noopener" href="#"><span class="fa fa-youtube"></span></a>
         </div>
       </div>
       
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, soluta enim! Reiciendis labore adipisci quod hic perferendis doloremque similique iure, molestiae laborum voluptates ea dolore quidem qui repellendus! Quis, quisquam.
-      </p>
-      <small>&copy; 2018 Steeple-Map, Inc.</small>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, soluta enim! Reiciendis labore adipisci quod hic perferendis doloremque similique iure, molestiae laborum voluptates ea dolore quidem qui repellendus! Quis, quisquam.  
+    </p>
+      <small>&copy; 2018 Steeple-Mate, Inc.</small>
     </div>
     </div>
     </div>
