--- a/src/shared/components/site-header/site-header.component.html
+++ b/src/shared/components/site-header/site-header.component.html
@@ -1,11 +1,11 @@
-<header id="hero" class="{{ mode }} auth-container" [ngClass]="{ 'loggedIn': isLoggedIn }">
+<header id="hero" class="auth-container">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <!-- hero navigation -->
           <div id="hero-nav">
             <a class="no-outline" routerLink="/">
-              <img class="sm brand" src="../../../assets/images/logo2.png" alt="Steeple-Map" />
+              <img class="sm brand" src="../../../assets/images/connection.png" alt="Steeple-Map" />
             </a>
             <site-menu></site-menu>
           </div>
