--- a/src/shared/components/avatar-menu/avatar-menu.less
+++ b/src/shared/components/avatar-menu/avatar-menu.less
@@ -1,21 +1,54 @@
 img.avatar {
     border-radius: 50%;
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
 }
 .sm-dropdown {
     button {
         .no-mar {margin: 0; padding: 0}
         background: transparent;
         border: none;
+        outline: none;
     }
 
     &.open .dropdown-toggle {
         box-shadow: none;
     }
 
-    .dropdown-menu {
-        border-radius: 0;
-        margin-top: 5px;
+  
+    .dropdown-menu{
+        margin-top:18px;border:none;
+        li{
+            a{
+                display: block;
+                padding: 3px 20px;
+                clear: both;
+                font-weight: 400;
+                line-height: 1.42857143;
+                color: #333;
+                white-space: nowrap;
+            }
+        }
+        li{
+            a:hover{
+                color: #262626;
+                text-decoration: none;
+                background-color: #f5f5f5;
+            }
+        }
+        .divider {
+            height: 1px;
+            margin: 9px 0;
+            overflow: hidden;
+            background-color: #e5e5e5;
+        }
+      
+        &:before{border: #ddd solid 9px;
+            content: "";
+            top:-18px;
+            position: absolute;
+            right: 0px;
+            border-color: transparent transparent #ddd transparent;
+        } 
     }
 }
